Fixed feedback form spacing

--- a/assets/stylesheets/existing/base-2.css
+++ b/assets/stylesheets/existing/base-2.css
@@ -35,7 +35,6 @@
 	color : #000000;
 	width : 80px;
 	text-align : left;
-	padding-left : 8px;
 }
 .seLabelTitle {
 	font-family : Arial, Helvetica, sans-serif;
@@ -69,6 +68,7 @@
 	padding-bottom : 4px;
 	font-weight : bold;
 	margin : 10px 10px 10px 0;
+	line-height: 1;
 }
 fieldset {
 	float : left;
